# ROUTER_IFC-HACKATHON2025

./: .dockerignore  .env.production  DEPLOY.md  Makefile  Procfile  README.md  RENDER-SETUP.md  VERCEL-DEPLOY.md  build.sh  deploy.sh  docker-compose.yml  package-lock.json  railway.json  render.yaml
BackEnd1/: .gitignore  .pdm-python  Dockerfile  db.sqlite3  pyproject.toml  requirements.production.txt  requirements.txt  test_location.py  test_rota_motorista.py
BackEnd1/config/: production.py  settings.py  urls.py
BackEnd1/routerifc/: admin.py  apps.py  models.py  serializers.py  views.py
BackEnd1/routerifc/management/commands/: migrate_passageiros.py
BackEnd1/routerifc/migrations/: 0001_initial.py  0002_alter_passageiro_endereco_alter_veiculo_passageiros.py  0002_motorista_cpf_veiculo.py  0003_empresa_motorista_empresa.py  0003_passageiro_usuario_alter_endereco_rotas_and_more.py  0004_motorista_usuario_alter_passageiro_usuario.py  0004_rotas.py  0005_admin.py  0005_rotas_veiculos.py  0006_alter_empresa_cnpj_alter_empresa_telefone_and_more.py  0006_endereco.py  0006_motorista_atualizado_em_motorista_latitude_atual_and_more.py  0007_make_rotas_optional.py  0007_passageiros_veiculo_passageiros.py  0008_fix_manytomany_warnings.py  0008_passageiros_nome.py  0009_alter_motorista_empresa.py  0009_rename_passageiros_passageiro.py
FrontEnd/: .env.production  Dockerfile  index.html  nginx.conf  package-lock.json  package.json  test-associacao-automatica.html  test-endereco-api.html  test-enderecos.html  vercel.json  vite.config.js
FrontEnd/src/: App.vue  main.js
(+52 files in other folders)
