[project]
name = "BackEnd"
version = "0.1.0"
description = "Default template for PDM package"
authors = [
    {name = "Henri0042007", email = "henrique.santiago.sb@gmail.com"},
]
dependencies = ["django>=5.2.5"]
requires-python = "==3.13.*"
readme = "README.md"
license = {text = "MIT"}


[tool.pdm]
distribution = false
