[project]
name = "BackEnd"
version = "0.1.0"
description = "Default template for PDM package"
authors = [
    {name = "Henri0042007", email = "henrique.santiago.sb@gmail.com"},
]
dependencies = ["django>=5.2.6", "djangorestframework>=3.16.1", "django-cors-headers>=4.7.0", "djangorestframework-simplejwt>=5.5.1", "drf-spectacular>=0.28.0"]
requires-python = "==3.13.*"
readme = "README.md"
license = {text = "MIT"}


[tool.pdm]
distribution = false

[tool.pdm.scripts]
dev = "python manage.py runserver" 